# Multimodal_Vector_DB

./: .gitignore  AUDIO_RETRIEVAL_TESTING_GUIDE.md  AUDIO_TESTING_README.md  AUDIO_TEST_DISK_SPACE.md  AUDIO_TEST_STATUS.md  CLIP_USAGE_NOTES.md  README.md  README_USAGE.md  benchmark_cross_modal.py  build_all_indices.py  build_cross_modal_index.py  build_matryoshka_indices.py  build_text_index.py  clean_code.py  cleanup_for_audio_test.py  demo_audio_retrieval.py  main.py  pyproject.toml  requirements.txt  search_audio.py  search_cross_modal.py  search_images.py  search_text.py  search_videos.py  setup.py  test_audio_mobile.py  test_audio_quick.py  test_audio_retrieval.py
.claude/: settings.local.json
saved_indices/: audio_index.metadata  video_index.metadata
scripts/: demo_matryoshka.py  test_audio_embedder.py  test_matryoshka.py  test_text_embedder.py  train_matryoshka.py
src/: __init__.py
src/database/: __init__.py  quantization.py  storage.py  vector_index.py
src/embedders/: __init__.py  audio_embedder.py  base_embedder.py  evaluation_results.json  finaltest.py  image_embedder.py  projection.py  testg.py  text_embedder.py  video_embedder.py
src/retrieval/: __init__.py  reranker.py  search_engine.py
src/utils/: __init__.py  config.py  metrics.py
tests/: test_audio_retrieval.py  test_caption_retrieval.py  test_cross_modal_retrieval.py  test_embedders.py  test_flickr30k.py  test_flickr30k_retrieval.py  test_metrics.py  test_search_engine.py  test_vector_index.py  test_video_retrieval.py
