[project]
name = "multimodal-db"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "hnswlib>=0.8.0",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
